add gorilla cookie sessions for validation errors and messages

--- a/web/template/layout.templ
+++ b/web/template/layout.templ
@@ -16,6 +16,7 @@ templ layout(title string) {
 				}
 				it.getsit - it makes your URLs... shorter
 			</title>
+			<script>let FF_FOUC_FIX;</script>
 		</head>
 		<body class="h-full w-full">
 			<div class="h-full p-4 antialiased sm:p-10 text-gray bg-gray-light">
