--- a/web/template/logo.templ
+++ b/web/template/logo.templ
@@ -26,7 +26,7 @@ templ logo(c logoConfig) {
 		<span class="font-black">
 			it.
 		</span>
-		<span class="text-green-dark">
+		<span class="text-green">
 			gets
 		</span>
 		<span class="font-black">
