--- a/web/template/pages.templ
+++ b/web/template/pages.templ
@@ -15,11 +15,11 @@ templ Homepage(vm HomepageViewModel) {
 			<div class="space-y-4">
 				@message(vm.Message)
 				@errors(vm.Errors)
-				<div class="p-2 rounded bg-gray-dark/15 dark:bg-gray-dark/50">
+				<div class="p-2 rounded bg-gray-dark/15 dark:bg-gray-light/10">
 					<form action="/create" method="post" novalidate>
 						<input type="hidden" name="csrf_token" value={ vm.CsrfToken }/>
 						<div class="flex justify-start items-center gap-2">
-							<input type="url" name="url" class="w-full p-2 bg-gray-light border border-green-dark rounded text-gray" placeholder="Enter URL"/>
+							<input type="url" name="url" class="w-full p-2 bg-gray-light border border-green rounded text-gray" placeholder="Enter URL"/>
 							@button(buttonConfig{text: "Get It", buttonType: "submit", className: "flex-shrink-0"})
 						</div>
 					</form>
