--- a/web/template/layout.templ
+++ b/web/template/layout.templ
@@ -112,7 +112,7 @@ type buttonConfig struct {
 	href       string
 }
 
-const buttonBaseClassName string = "py-1.5 px-6 text-center border border-green bg-green hover:bg-green/50 text-gray-light hover:text-gray-dark dark:hover:text-gray uppercase text-lg rounded font-black text-xl"
+const buttonBaseClassName string = "py-1.5 px-6 text-center border border-green bg-green hover:bg-green/50 text-gray-light hover:text-gray-dark dark:hover:text-gray-light uppercase text-lg rounded font-black text-xl"
 
 templ button(c buttonConfig) {
 	if c.href != "" {
