--- a/web/template/layout.templ
+++ b/web/template/layout.templ
@@ -33,8 +33,8 @@ templ layout(title string) {
 			<link rel="icon" type="image/png" sizes="32x32" href={ "/assets/favicon.png?" + assetVersion }/>
 			<script>let FF_FOUC_FIX;</script>
 		</head>
-		<body class={ "h-full w-full", colorMode(ctx) }>
-			<div class="h-full pt-4 antialiased  text-foreground bg-background flex flex-col">
+		<body class={ "h-full w-full antialiased text-foreground bg-background", colorMode(ctx) }>
+			<div class="h-full pt-4   flex flex-col">
 				@header(headerConfig{logoSize: logoSizeNormal})
 				<div class="max-w-2xl mx-auto flex-grow py-8 sm:py-12 w-full px-4">
 					{ children... }
