refactor internal serivce and related into a url domain

--- a/web/template/pages.templ
+++ b/web/template/pages.templ
@@ -42,6 +42,7 @@ type InfoViewModel struct {
 	ShortUrlWithProto string
 	Url               string
 	Token             string
+	QRCode            string
 	VisitCount        int
 }
 
