--- a/web/template/pages.templ
+++ b/web/template/pages.templ
@@ -52,7 +52,7 @@ templ Info(vm InfoViewModel) {
 			<div class="py-2 px-4 rounded bg-gray-dark/15 dark:bg-gray-light/10 text-2xl font-bold">
 				<a href={ templ.SafeURL(vm.ShortUrlWithProto) }>{ vm.ShortUrl }</a>
 			</div>
-			<div>
+			<div class="space-y-1.5">
 				<div>{ vm.Url }</div>
 				<div>
 					if vm.VisitCount != 1 {
@@ -61,6 +61,7 @@ templ Info(vm InfoViewModel) {
 						{ strconv.Itoa(vm.VisitCount) } Visit
 					}
 				</div>
+				<img src={ vm.QRCode } class="border border-4 border-green" alt={ "QR Code for " + vm.ShortUrl }/>
 			</div>
 			<div>
 				@button(buttonConfig{text: "Get It Again", className: "w-full", href: "/"})
