--- a/web/template/pages.templ
+++ b/web/template/pages.templ
@@ -53,7 +53,7 @@ templ Info(vm InfoViewModel) {
 				<div class="flex-grow whitespace-nowrap overflow-hidden text-ellipsis">
 					<a href={ templ.SafeURL(vm.ShortUrlWithProto) }>{ vm.ShortUrl }</a>
 				</div>
-				<button type="button" class="hover:text-green flex-grow-0 relative block" data-short-url={ templ.SafeURL(vm.ShortUrlWithProto) } id="copy-short-url">
+				<button type="button" class="hover:text-green flex-grow-0 relative block" data-short-url={ vm.ShortUrlWithProto } id="copy-short-url">
 					<span class="sr-only">Copy</span>
 					@icon("copy", "w-6 h-6")
 					<div class="absolute left-0 right-0 top-full text-xs text-green flex justify-center items-center pt-3 hidden" id="copied-message">
@@ -81,7 +81,9 @@ templ Info(vm InfoViewModel) {
 						{ strconv.Itoa(vm.VisitCount) } Visit
 					}
 				</div>
-				<img src={ vm.QRCode } class="border border-4 -m-4 border-green max-w-64 w-full" alt={ "QR Code for " + vm.ShortUrl } width="256" height="256"/>
+				<div class="border border-4 -m-4 border-green">
+					<img src={ vm.QRCode } class=" max-w-64 w-full" alt={ "QR Code for " + vm.ShortUrl } width="256" height="256"/>
+				</div>
 			</div>
 			<div>
 				@button(buttonConfig{text: "Get It Again", className: "w-full", href: "/"})
